feat: Update Homebrew formula for macOS ARM64 support, new repository URLs, and automate formula updates with a new GitHub Actions workflow.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,3 +57,58 @@ jobs:
           files: |
             artifacts/**/*
           generate_release_notes: true
+
+  update-formula:
+    needs: release
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+
+      - name: Update Formula
+        env:
+          VERSION: ${{ github.ref_name }}
+          REPO: ${{ github.repository }}
+        run: |
+          # Strip 'v' from version if present for the formula version field
+          FORMULA_VERSION="${VERSION#v}"
+          
+          # Calculate SHA256 checks
+          SHA_MACOS_AMD64=$(sha256sum artifacts/langscan-macos-amd64/langscan-macos-amd64 | awk '{ print $1 }')
+          SHA_MACOS_ARM64=$(sha256sum artifacts/langscan-macos-arm64/langscan-macos-arm64 | awk '{ print $1 }')
+          SHA_LINUX_AMD64=$(sha256sum artifacts/langscan-linux-amd64/langscan-linux-amd64 | awk '{ print $1 }')
+
+          # Update Version
+          sed -i "s/version \".*\"/version \"$FORMULA_VERSION\"/" Formula/langscan.rb
+
+          # Update macOS Intel (amd64)
+          sed -i -E "/url \".*langscan-macos-amd64\"/!b;n;s/sha256 \".*\"/sha256 \"$SHA_MACOS_AMD64\"/" Formula/langscan.rb
+          sed -i "s|url \".*langscan-macos-amd64\"|url \"https://github.com/$REPO/releases/download/$VERSION/langscan-macos-amd64\"|" Formula/langscan.rb
+
+          # Update macOS ARM (arm64)
+          sed -i -E "/url \".*langscan-macos-arm64\"/!b;n;s/sha256 \".*\"/sha256 \"$SHA_MACOS_ARM64\"/" Formula/langscan.rb
+          sed -i "s|url \".*langscan-macos-arm64\"|url \"https://github.com/$REPO/releases/download/$VERSION/langscan-macos-arm64\"|" Formula/langscan.rb
+
+          # Update Linux AMD64
+          sed -i -E "/url \".*langscan-linux-amd64\"/!b;n;s/sha256 \".*\"/sha256 \"$SHA_LINUX_AMD64\"/" Formula/langscan.rb
+          sed -i "s|url \".*langscan-linux-amd64\"|url \"https://github.com/$REPO/releases/download/$VERSION/langscan-linux-amd64\"|" Formula/langscan.rb
+
+          # Update Homepage if it still points to the old repo (optional, but good for consistency)
+          sed -i "s|homepage \".*\"|homepage \"https://github.com/$REPO\"|" Formula/langscan.rb
+
+          # Verify the changes
+          cat Formula/langscan.rb
+
+      - name: Commit and Push
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add Formula/langscan.rb
+          git commit -m "Update Formula to ${{ github.ref_name }} [skip ci]" || echo "No changes to commit"
+          git push origin HEAD:main
+
